<resources>
    <string name="app_name">My Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add Note</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="show_recipe">Show Recipe</string>

    <string name="type">Type…</string>

    <string name="email">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="ask_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="welcome_text">Welcome to MyNotes</string>

    <string name="welcome_text_2">Let\'s Begin!</string>
    <string name="name">NAME</string>
    <string name="surname">SURNAME</string>
    <string name="repeat_password">PASSWORD REPEAT</string>
    <string name="have_account">Already Have an Account?</string>

    <string name="send">Send</string>

    <string name="change_email">Change E-Mail</string>
    <string name="change_password">Change Password</string>
    <string name="change_name_surname">Change Name-Surname</string>
    <string name="delete_account">Delete Account</string>
    <string name="device_settings">Device Settings</string>

    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="how_to">How to do</string>
    <string name="save">Save</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
