<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SettingsActivity"
    android:padding="30dp"
    android:background="@drawable/my_notes_edit">

    <Button
        android:id="@+id/settings_change_email"
        android:text="@string/change_email"
        android:textColor="@color/colorBlue"
        android:background="@drawable/rounded_button_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/settings_change_password"
        android:text="@string/change_password"
        android:textColor="@color/colorBlue"
        android:background="@drawable/rounded_button_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_change_email"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/settings_change_name"
        android:text="@string/change_name_surname"
        android:textColor="@color/colorBlue"
        android:background="@drawable/rounded_button_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_change_password"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/settings_delete_account"
        android:text="@string/delete_account"
        android:textColor="@color/colorBlue"
        android:background="@drawable/rounded_button_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_device_settings"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/settings_device_settings"
        android:text="@string/device_settings"
        android:textColor="@color/colorBlue"
        android:background="@drawable/rounded_button_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_change_name"
        android:layout_marginTop="50dp"
        />

</RelativeLayout>