<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.RecipeAddFragment"
    android:padding="30dp"
    android:background="@drawable/my_notes_edit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/recipe_name"
                android:hint="@string/recipe_name"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/recipe_ingredients"
                android:hint="@string/recipe_ingredients"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/recipe_how_to"
                android:hint="@string/how_to"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/recipe_save"
                android:text="@string/save"
                android:background="@drawable/rounded_button_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

    </ScrollView>




</RelativeLayout>